Fix services box on home page
Removed padding to allow more space in the service cards. Hopefully will fix the text overflowing behind the button.

--- a/styles.css
+++ b/styles.css
@@ -178,7 +178,6 @@ p {
 }
 
 .services-container {
-  padding: 20px;
   display: flex;
   /* Use flexbox to align the cards horizontally */
   flex-wrap: wrap;
